Documentation with swagger is added
