# src/controllers/userController.js
@@ -15,7 +15,6 @@ module.exports = {
         }
       }
     */
-
     const { name, surname, email, password } = req.body
 
     // Validate User Exists
@@ -23,6 +22,10 @@ module.exports = {
       where: { email },
     })
     if (userExists) {
+      /* #swagger.responses[400] = {          
+        schema: { "error": "User already exists" },
+      },
+      */
       const error = new Error('User already exists')
       logger.error(error)
       res.status(400)
@@ -67,14 +70,26 @@ module.exports = {
 
   async login(req, res) {
     /*#swagger.tags = ['User'];
-		  #swagger.description = 'Login User'
-      #swagger.summary = "Login user"
+		  #swagger.description = 'Login User';
+      #swagger.summary = "Login user";
+      #swagger.requestBody = {
+        required: true,
+        content: {
+            "application/json": {
+                schema: { $ref: "#/definitions/loginUser" },
+            }
+        }
+      }
     */
     const { email, password } = req.body
 
     // Validate User Exists .scope("sendDataUser")
     const userLogin = await User.findOne({ where: { email } })
     if (!userLogin) {
+      /* #swagger.responses[404] = {          
+        schema: { "error": "User not found" },
+      },
+      */
       const error = new Error('User not found')
       res.status(404)
       return res.json({ error: error.message })
@@ -82,6 +97,14 @@ module.exports = {
 
     // comprobar passwd
     if (await userLogin.validPassword(password)) {
+      /* #swagger.responses[200] = {
+          content: {
+            "application/json": {
+              schema: { $ref: "#/definitions/resLoginUser" },
+            }
+          }
+        },
+      */
       res.status(200)
       res.json({
         id: userLogin.id,
@@ -89,6 +112,10 @@ module.exports = {
         surname: userLogin.surname,
       })
     } else {
+      /* #swagger.responses[403] = {          
+        schema: { "error": "Password does not match" },
+      },
+      */
       const error = new Error('Password does not match')
       res.status(403)
       return res.json({ error: error.message })
@@ -97,8 +124,8 @@ module.exports = {
 
   async profile(req, res) {
     /*#swagger.tags = ['User'];
-		  #swagger.description = 'Profile User'
-      #swagger.summary = "Profile user"
+		  #swagger.description = 'Profile User';
+      #swagger.summary = "Profile user";
     */
     const { id } = req.params
     // Validate User Exists
@@ -106,25 +133,50 @@ module.exports = {
       where: { id },
     })
     if (!userExists) {
+      /* #swagger.responses[400] = {          
+        schema: { "error": "User not found" },
+      },
+      */
       const error = new Error('User not found')
       logger.error(error)
       res.status(400)
       return res.json({ error: error.message })
     }
+    /* #swagger.responses[200] = {
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/newUser" },
+          }
+        }
+      },
+    */
     res.status(200)
     res.json(userExists.dataValues)
   },
 
   async update(req, res) {
     /*#swagger.tags = ['User'];
-		  #swagger.description = 'Update User'
-      #swagger.summary = "Update user"
+		  #swagger.description = 'Update User';
+      #swagger.summary = "Update user";
+            #swagger.requestBody = {
+        required: true,
+        content: {
+            "application/json": {
+                schema: { $ref: "#/definitions/mailUser" },
+            }
+        }
+      }
+
     */
     const { id } = req.params
     const { email } = req.body
     try {
       const userToUp = await User.scope('sendDataUser').findByPk(id)
       if (!userToUp) {
+        /* #swagger.responses[400] = {          
+          schema: { "error": "User not found" },
+        },
+        */
         const error = new Error('User not found')
         logger.error(error)
         res.status(400)
@@ -134,6 +186,10 @@ module.exports = {
       if (userToUp.email !== email) {
         const emailExists = await User.findOne({ where: { email } })
         if (emailExists) {
+          /* #swagger.responses[400] = {          
+            schema: { "error": "Address already exists" },
+          },
+          */
           const error = new Error('Address already exists')
           logger.error(error)
           res.status(400)
@@ -147,8 +203,16 @@ module.exports = {
       userToUp.gender = req.body.gender
       userToUp.email = req.body.email
       userToUp.username = req.body.username
-
+      /* #swagger.responses[200] = {
+          content: {
+            "application/json": {
+              schema: { $ref: "#/definitions/newUser" },
+            }
+          }
+        },
+      */
       const userUp = await userToUp.save()
+
       res.status(200).json(userUp)
     } catch (error) {
       logger.error(error)
@@ -164,16 +228,27 @@ module.exports = {
       const { id } = req.params
       const userToDel = await User.findByPk(id)
       if (!userToDel) {
+        /* #swagger.responses[400] = {          
+          schema: { "error": "User not found" },
+        },
+        */
         const error = new Error('User not found')
         logger.error(error)
         res.status(400)
         return res.json({ error: error.message })
       }
-
+      /* #swagger.responses[200] = {          
+        schema: { "msg": "User Deleted" },
+      },
+      */
       userToDel.destroy()
       res.status(200)
       return res.json({ msg: 'User Deleted' })
     } catch (error) {
+      /* #swagger.responses[500] = {          
+        schema: { "error": "Internal Error" },
+      },
+      */
       logger.error(error)
       res.status(500)
       return res.json({ error: error })
@@ -188,10 +263,22 @@ module.exports = {
     try {
       //TODO: pagination
       const users = await User.scope('sendDataUser').findAll()
+      /* #swagger.responses[200] = {          
+          content: {
+            "application/json": {
+              schema: { $ref: "#/definitions/arrayUsers" },
+            }
+          }
+      },
+      */
       res.status(200)
       return res.json(users)
     } catch (error) {
-      console.log(error)
+      /* #swagger.responses[500] = {          
+        schema: { "error": "Internal Error" },
+      },
+      */
+      logger.error(error)
       return res.status(500).json({ error: error })
     }
   },
